samples/_failures_safe/1761158702_67a324_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7f911e2c.c: In function ‘main’:
./samples/SAFE/__tmp_7f911e2c.c:153:5: error: expected expression at end of input
  153 |     for (size_t i = 0;
      |     ^~~
./samples/SAFE/__tmp_7f911e2c.c:153:5: error: expected declaration or statement at end of input
